OO-3625: add some bread crumbs in portfolio